corrección de comentarios
